# ASM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md
benches/: ablations_throughput.rs  interact_throughput.rs  sweep_throughput.rs
configs/: e2e.yaml
crates/asm-aut/: Cargo.toml
crates/asm-aut/benches/: scan_vacuum.rs
crates/asm-aut/src/: canonical.rs  cluster.rs  code_aut.rs  graph_aut.rs  hash.rs  invariants.rs  lib.rs  logical.rs  serde.rs  spectral.rs
crates/asm-aut/tests/: cluster_deterministic.rs  code_aut_css.rs  fixtures.rs  graph_aut_known.rs  invariants_det.rs  serde_roundtrip.rs
crates/asm-code/: Cargo.toml
crates/asm-code/benches/: dispersion_probe.rs  syndrome_scan.rs
crates/asm-code/docs/: phase3-code-api.md
crates/asm-code/src/: analyze.rs  css.rs  defect.rs  dispersion.rs  hash.rs  lib.rs  serde.rs  state.rs  syndrome.rs
crates/asm-code/tests/: css_commutation.rs  defects_fixture.rs  determinism_seeds.rs  dispersion_common_c.rs  serde_roundtrip.rs  syndrome_minimality.rs
crates/asm-core/: Cargo.toml
crates/asm-core/src/: errors.rs  lib.rs  provenance.rs  rng.rs  types.rs
crates/asm-core/tests/: error_surface.rs  rng_deterministic.rs  serde_roundtrip.rs  traits_compile.rs
crates/asm-dsr/: Cargo.toml
crates/asm-dsr/src/: export.rs  ingest.rs  lib.rs  query.rs  schema.rs  serde.rs
crates/asm-dsr/tests/: export_consistency.rs  ingest_roundtrip.rs  query_filters.rs
crates/asm-exp/: Cargo.toml
crates/asm-exp/examples/: gen_baseline.rs
crates/asm-exp/src/: ablations.rs  deform.rs  gaps.rs  hash.rs  lib.rs  registry.rs  runbook.rs  serde.rs  sweep.rs
crates/asm-gauge/: Cargo.toml
crates/asm-gauge/benches/: gauge_throughput.rs
crates/asm-gauge/src/: closure.rs  decomp.rs  hash.rs  invariants.rs  lib.rs  rep.rs  report.rs  serde.rs  ward.rs
crates/asm-graph/: Cargo.toml
crates/asm-graph/benches/: build_graph.rs  curvature.rs  queries.rs
crates/asm-graph/docs/: phase2-graph-api.md
crates/asm-graph/src/: curvature.rs  flags.rs  generators.rs  hash.rs  hypergraph.rs  ids.rs  lib.rs  rewire.rs  serialization.rs
crates/asm-graph/tests/: acyclicity.rs  curvature_sanity.rs  degree_bounds.rs  fuzz_random_builds.rs  hyperedge_roundtrip.rs  rewiring_validity.rs
crates/asm-host/: Cargo.toml
crates/asm-host/src/: abi.rs  hash.rs  lib.rs  loader.rs  manifest.rs  registry.rs  sandbox.rs  serde.rs
crates/asm-host/tests/: abi_compat.rs  manifest_roundtrip.rs  sandbox_caps.rs
crates/asm-int/: Cargo.toml
crates/asm-int/src/: fit.rs  hash.rs  kernel.rs  lib.rs  measure.rs  prepare.rs  report.rs  running.rs  serde.rs
crates/asm-land/: Cargo.toml
crates/asm-land/benches/: landscape_throughput.rs
crates/asm-land/src/: dispatch.rs  filters.rs  hash.rs  lib.rs  metrics.rs  plan.rs  report.rs  serde.rs  stages.rs  stat.rs
crates/asm-land/tests/: dispatch_resume.rs  filters_det.rs  plan_roundtrip.rs  serde_roundtrip.rs  stat_consistency.rs
crates/asm-mcmc/: Cargo.toml
crates/asm-mcmc/benches/: sweep_throughput.rs
crates/asm-mcmc/docs/: phase4-ensemble-api.md
crates/asm-mcmc/src/: analysis.rs  checkpoint.rs  config.rs  determinism.rs  energy.rs  kernel.rs  lib.rs  manifest.rs  metrics.rs  moves_code.rs  moves_graph.rs  moves_worm.rs  tempering.rs
crates/asm-mcmc/tests/: checkpoint_roundtrip.rs  coverage_metrics.rs  detailed_balance.rs  determinism_runs.rs  tempering_exchange.rs
crates/asm-rg/: Cargo.toml
crates/asm-rg/benches/: extract_couplings.rs  rg_step.rs
crates/asm-rg/src/: block.rs  contract.rs  covariance.rs  dictionary.rs  graph_coarse.rs  hash.rs  isometry.rs  lib.rs  params.rs  serde.rs
crates/asm-rg/tests/: covariance_small.rs  dictionary_stability.rs  rg_step_css_preserve.rs  serde_roundtrip.rs
crates/asm-sim/: Cargo.toml
crates/asm-sim/src/: main.rs
crates/asm-sim/src/commands/: ablation.rs  assert.rs  assert_batch.rs  deform.rs  demo.rs  doctor.rs  extract.rs  fit_couplings.rs  fit_running.rs  gaps.rs  gauge.rs  gauge_batch.rs  gauge_compare.rs  interact.rs  interact_batch.rs  landscape.rs  mod.rs  paper_pack.rs  plugin.rs  publish.rs  report.rs  rg.rs  rg_covariance.rs  spectrum.rs  spectrum_batch.rs  submit.rs  sweep.rs  verify.rs  version.rs  web.rs
crates/asm-spec/: Cargo.toml
crates/asm-spec/benches/: spectrum_throughput.rs
crates/asm-spec/src/: correl.rs  dispersion.rs  excitations.rs  hash.rs  lib.rs  operators.rs  propagation.rs  report.rs  serde.rs
crates/asm-thy/: Cargo.toml
crates/asm-thy/benches/: thy_assertions_throughput.rs
crates/asm-thy/src/: assertions.rs  bundle.rs  crosscheck.rs  hash.rs  lib.rs  policies.rs  report.rs  serde.rs  symbolic.rs
crates/asm-thy/tests/: assertions_det.rs  crosscheck_sanity.rs  policies_strictness.rs  serde_roundtrip.rs
crates/asm-thy/tests/common/: mod.rs
crates/asm-web/: Cargo.toml
crates/asm-web/src/: build.rs  collect.rs  figures.rs  lib.rs  pages.rs  serde.rs
crates/asm-web/tests/: figures_det.rs  pages_build_smoke.rs
dashboards/: ablations.md  gaps.md  rg_covariance.md  vacua.md
docker/: Dockerfile  compose.yml
docs/: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  GOVERNANCE.md  HPC_SETUP.md  RELEASE_NOTES.md  REPRODUCIBILITY.md  phase1-api.md  phase11-spec-api.md  phase12-gauge-api.md  phase13-int-api.md  phase14-land-api.md  phase15-thy-api.md  phase16-plugins.md  phase16-registry.md  phase16-web.md  phase5-aut-api.md  phase6-rg-api.md  phase7-exp-api.md  phase9-ablation-api.md
paper/: Makefile  emergent_order.md  main.md  refs.bib
registry/: README.md  schema.sql
replication/: Makefile  README.md  run.sh
runs/: t2_metrics_diff.csv
scripts/: build_paper.sh  collect_results.py  compare_to_golden.py  emit_report_md.py  extract_goldens.py  genesis_atlas.sh  genesis_atlas_pipeline.py  make_figures.py  make_validation_index.py  pack_dataset.py  render_dashboards.py  run_ablation.sh  run_full_suite.sh  summarize_registry.py  verify_bundle.py
seeds/: code.json  graph.json  states.json
summary/: genesis_atlas.md
tests/: closure_pass.rs  (+25 more)
(+383 files in other folders)
