[workspace]
members = [
    "crates/asm-core",
    "crates/asm-graph",
    "crates/asm-code",
    "crates/asm-aut",
    "crates/asm-mcmc",
    "crates/asm-sim",
    "crates/asm-rg",
    "crates/asm-exp",
    "crates/asm-spec",
    "crates/asm-gauge",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
bincode = "1.3"
proptest = "1.4"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
siphasher = "0.3"
tempfile = "3.10"
