[package]
name = "asm-code"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
asm-core = { path = "../asm-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
siphasher = { workspace = true }

[dev-dependencies]
asm-graph = { path = "../asm-graph" }
criterion = { workspace = true }

[[bench]]
name = "syndrome_scan"
harness = false

[[bench]]
name = "dispersion_probe"
harness = false
