[package]
name = "asm-exp"
version = "0.1.0"
edition = "2021"
description = "Parametric experiment orchestration utilities for ASM"

[dependencies]
asm-core = { path = "../asm-core" }
asm-graph = { path = "../asm-graph" }
asm-code = { path = "../asm-code" }
asm-rg = { path = "../asm-rg" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
csv = "1.3"
rusqlite = { version = "0.29", features = ["bundled"] }

[dev-dependencies]
serde_json = { workspace = true }
