[package]
name = "asm-gauge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Gauge algebra extraction utilities for ASM states"
repository = "https://example.com/asm"

[dependencies]
asm-core = { path = "../asm-core" }
asm-spec = { path = "../asm-spec" }
asm-aut = { path = "../asm-aut" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "gauge_throughput"
harness = false
