[package]
name = "asm-rg"
version = "0.1.0"
edition = "2021"
description = "Deterministic renormalisation group and operator dictionary utilities for ASM."
license = "MIT"
authors = ["ASM Team"]

[dependencies]
asm-core = { path = "../asm-core" }
asm-graph = { path = "../asm-graph" }
asm-code = { path = "../asm-code" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
bench = false

[[bench]]
name = "rg_step"
harness = false

[[bench]]
name = "extract_couplings"
harness = false
