[package]
name = "asm-web"
version = "0.16.0"
edition = "2021"
authors = ["ASM Contributors"]
description = "Static site generator for ASM dashboards"
license = "MIT"

[dependencies]
asm-core = { path = "../asm-core" }
asm-dsr = { path = "../asm-dsr" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
rayon = "1.10"
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }

[dev-dependencies]
tempfile = { workspace = true }
